# genetic-image-creator

./: .gitignore  Cargo.toml  Todo.md  log.txt  package.json
cmd/main/: main.rs
src/: add_shader.wgsl  add_shader_array.wgsl  add_shader_array_block.wgsl  compute.rs  compute_shader.wgsl  lib.rs  main.rs  multi_shader.wgsl  shader.wgsl  shaper.rs  texture_to_buffer_sum_shader.wgsl  wgpu_utils.rs
