[package]
name = "genetic-image-creator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = {version = "1.14.0", features = [ "derive" ]}
cgmath = "0.18.0"
env_logger = "0.10.1"
ferris-says = "0.3.1"
futures-intrusive = "0.5.0"
image = "0.24.7"
imageproc = "0.23.0"
log = "0.4.20"
png = "0.17.10"
pollster = "0.3.0"
rand = "0.8.5"
rayon = "1.8.0"
wgpu = "0.18.0"

[[bin]]
name = "bin"
path = "cmd/main/main.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]

name = "compute"
path = "src/compute.rs"